fix hero height and vertical alignment

--- a/static/portfolio/css/index.css
+++ b/static/portfolio/css/index.css
@@ -62,7 +62,6 @@ body {
     left: 0;
     right: 0;
     height: 100vh;
-    min-height: 43rem;
 }
 
 #particles-js {
@@ -77,7 +76,7 @@ body {
 
 .hero-content {
     position: absolute;
-    top: 28%;
+    top: 25%;
     left: 0;
     right: 0;
     opacity: 0;
@@ -368,6 +367,7 @@ footer {
     .navbar ul a {padding-left: 12px; padding-right: 12px;}
     .navbar i {font-size: 1.5rem;}
     .page-title {font-size: 1.8rem;}
+    .hero-content {top: 30%;}
     .hero-text {font-size: 2.5rem;}
     #hero .typed {font-size: 2.5rem;}
     #hero .typed-cursor {font-size: 3rem;}
@@ -385,6 +385,7 @@ footer {
     .page-title {font-size: 1.3rem;}
     .navbar a {padding: 0 12px;}
     .hero-text {font-size: 1.9rem;}
+    .hero-content {top: 30%;}
     #hero .typed {font-size: 1.9rem;}
     #hero .typed-cursor {font-size: 2.5rem;}
     .table-div td {padding: .3rem 1rem;}
